# scripture-search

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: run-lint.yaml  run-pylint.yaml  run-tests.yaml  test.yaml
notebooks/: 2025_02_17_Collect_Data_From_Dhamma_Talks.ipynb  2025_03_02_Collect_Data_From_Dhamma_Talks.ipynb
planning/: 2025-01-25_ideation.md
scripture_search/: config.py  logger.py  main.py
scripture_search/data_collection/: data_collector.py  dhamma_talks.py
tests/: test_main.py
