[project]
name = "scripture-search"
version = "0.0.1"
description = "A tool for searching scripture."
authors = [{ name = "Anthony D'Achille", email = "<adachille15@gmail.com>" }]
requires-python = ">=3.9"
readme = "README.md"
packages = [{ include = "scripture_search" }]
license = "GPL-3.0-or-later"
homepage = "https://github.com/adachille/scripture-search"
repository = "https://github.com/adachille/scripture-search"
keywords = ["scripture", "search"]
dependencies = []

[project.optional-dependencies]
dev = [
    "black==24.8.0",
    "pylint==3.2.7",
]
test = [
    "pytest==7.2.0",
    "coverage==7.6.1",
]

[tool.coverage.report]
omit = ["tests/*"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
