[project]
name = "scripture-search"
version = "0.0.1"
description = "A tool for searching scripture."
authors = [{ name = "Anthony D'Achille", email = "<adachille15@gmail.com>" }]
requires-python = ">=3.9"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["scripture", "search"]
dependencies = []

[project.optional-dependencies]
dev = [
    "beautifulsoup4==4.13.3",
    "black[jupyter]==24.8.0",
    "pandas (>=2.2.3,<3.0.0)",
    "pylint==3.2.7",
    "notebook==7.3.2",
    "ipykernel==6.29.5",
    "tqdm>=4.67.1,<5.0.0",
]
test = [
    "pytest==7.2.0",
    "coverage==7.6.1",
]

[tool.coverage.report]
omit = ["tests/*"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
